# socialist-lib

./: CMakeLists.txt  README.md
src/: socialist.cpp  socialist.hpp
